sources/chargen.css
* {
  margin: 0;
  padding: 0;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

button {
  padding: revert;
}

canvas {
  image-rendering: pixelated;
}

.zoomed-in {
  zoom: 2;
}

.zoomed-out {
  zoom: 0.5;
}

.zoomed-in.zoomed-out {
  zoom: 1;
}

body {
  margin: 10px 15px;
  min-width: 1280px;
  font-size: 10pt;
  font-family: monospace;
}

header {
  position: sticky;
  top: 0;
  left: 0;
  margin-top: -10px;
  padding-top: 10px;
  width: 100%;
  display: flex;
  flex-direction: row;
  background-color: white;
  opacity: 1;
  z-index: 4;
}

header > section {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  width: 50vw;
  margin-top: 10px;
  margin-left: 15px;
}

#preview-animations {
  padding-top: 15px;
}

h1 {
  margin: 10px 0px;
}

h2 {
  margin: 10px 0px;

}

h3 {
  font-size: 1em;
  margin: 4px 0px 0px 0px;
}

p {
  margin: 10px 0px;
}

.subtitle {
  padding-left: 50px;
}

#save {
  width: 60%;
  min-width: 832px;
  margin: 40px 0;
  float: right;
  padding-left: 15px;
}

#source {
  width: 30%;
  min-width: 200px;
  margin: 40px 0;
  clear: both;
  float: left;
  font-size: larger;
}

#credits {
  width: 100%;
  clear: both;
  max-width: calc(100vw - 80px);
}

#advanced {
  float: left;
}

input[type=button], input[type=reset] {
  padding: 2px 1em;
}

#previewAnimationsBox > * {
  vertical-align: top;
}

#controls {
  position: sticky;
  top: 140px;
  left: 0;
  padding-top: 10px;
  background-color: white;
  opacity: 1;
  z-index: 2;
  margin-left: 15px;
  order: -1;
  height: 60px;
}

#controls > * {
  background-color: white;
  opacity: 1;
  z-index: 2;
}

#chooser {
  overflow-y: auto;
  min-width: 200px;
  max-height: calc(100vh - 380px);
  margin-left: 15px;
  order: 2;
}

#preview {
  min-width: 832px;
  max-height: calc(100vh - 160px);
  overflow-y: auto;
  margin-top: 0;
  position: relative;
  order: 1;
  left: 15px;
  grid-row: span 2;
}

#customizeChar {
  display: grid;
  grid-template-columns: 40% auto;
}

#credits, #advanced {
  margin-left: 15px;
}

summary {
  display: none;
}

/* tablet view 800 - 1280 px */
@media screen and (max-width: 1280px) {
  header {
    flex-direction: column;
  }

  #header-left {
    width: calc(100% - 140px);
    min-height: 180px;
    overflow-y: auto;
  }

  #customizeChar {
    display: flex;
    flex-direction: column; 
  }

  #preview {
    margin-top: 180px;
    max-height: none;
  }

  #preview.anim-canvas-64 {
    margin-top: 244px;
  }

  #preview.anim-canvas-128 {
    margin-top: 308px;
  }

  #preview.anim-canvas-192 {
    margin-top: 372px;
  }

  #customizeChar > section {
    width: calc(100vw - 80px);
  }

  #chooser {
    height: auto;
    max-height: none;
  }

  #controls {
    position: fixed;
    z-index: 4;
    margin-top: -10px;
    padding-top: 30px;
    padding-left: 20px;
    padding-bottom: 20px;
  }

  /* override #customizeChar > section */
  #customizeChar > #controls {
    width: 100%;
  }

  #preview-animations {
    margin-left: 15px;
    position: relative;
    top: 150px;
    z-index: 2;
    opacity: 1;
    background-color: white;
    margin-top: -60px;
    padding-top: 40px;
    width: 100%;
  }
}

@media screen and (max-width: 1280px) and (max-height: 1200px) {
  header {
    position: static;
    height: 140px;
  }

  #controls {
    position: relative;
    z-index: 2;
    top: 40px;
    padding-left: 0;
    margin-top: 0;
  }

  #preview-animations {
    position: absolute;
    z-index: 0;
    top: 350px;
  }

  #preview-animations.controls-open {
    top: 260px;
  }

  #preview {
    margin-top: 260px;
    padding-top: 30px;
  }

  summary {
    display: list-item;
  }

  details {
    position: relative;
    top: -4rex;
  }

  #controls:has(>details:not([open])) {
    position: relative;
    top: 40px;
  }

  #preview:has(+#controls>details:not([open])) {
    margin-top: 170px;
  }

  #chooser {
    padding-top: 30px;
  }

  #preview:has(>details[open]) {
    padding-bottom: 30px;
  }
}

#chooser p.instr {
  padding: 10px 0;
  margin: 10px 0;
}

#preview p.instr {
  padding: 10px;
  margin: 12px 6px;
}

ul {
  list-style-type: none;
}

#chooser>details>ul {
  border-left: solid 1px silver;
  padding-left: 0.5em;
  margin-left: 0.5em;
}

#chooser ul>li>span {
  cursor: pointer;
}

#chooser ul>li>.condensed:after {
  padding-left: 10px;
  content: '\25B6';
}

#chooser ul>li>.expanded:after, #chooser .condensed:hover:after {
  padding-left: 10px;
  content:  '\25BC';
}

.condensed:hover, .expanded:hover {
  text-decoration: underline;
}

.search-result {
  background-color: yellow;
}

#chooser>details>ul ul {
  display: none;
  margin-left: 0.5em;
  border-left:  solid 1px silver;
  padding-left: 0.5em;
}

#chooser ul.hasPreview {
  text-indent: 0;
}

#chooser li.hasPreview {
  display: inline-block;
  padding-left: 5px;
  padding-right: 5px;
  padding-bottom: 3px;
  margin-left: 0;
  margin-right: 0;
  text-indent: 0;
  border: solid 1px transparent;
  border-radius: 3px;
}

#chooser li.hasPreview:hover {
  border-color: silver;
}

li.hasPreview canvas {
  display: block;
}

#chooser.compact canvas {
  display:  inline-block;
  width: 32px;
  vertical-align:  middle;
}

#customizeChar .buttons {
  display: block;
  margin: 50px 0;
}

.control-label {
  font-weight: bold;
}

label[for="displayMode-compact"] {
  display: inline-block;
}

#creditsText {
  width: 100%;
}

#github {
  position: fixed;
  top: 0;
  right: 0;
}

a {
  border: 0;
}

